name:               streamly-dom
version:            0.1.0
synopsis:           Browser (DOM) programming using streamly
description:
  * <https://github.com/composewell/streamly streamly>

homepage:            https://github.com/composewell/streamly-dom
bug-reports:         https://github.com/composewell/streamly-dom/issues
license:             BSD3
license-file:        LICENSE
-- tested-with:         GHC==7.10.3
--                    , GHC==8.0.2
--                    , GHC==8.4.4
--                    , GHC==8.6.3
author:              Harendra Kumar
maintainer:          harendra.kumar@gmail.com
copyright:           2019 Composewell Technologies
category:            Web
stability:           Experimental
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
    Changelog.md
    README.md

source-repository head
    type: git
    location: https://github.com/composewell/streamly-dom

flag dev
  description: Development build
  manual: True
  default: False

flag examples
  description: Build including examples
  manual: True
  default: False

-------------------------------------------------------------------------------
-- Library
-------------------------------------------------------------------------------

library
    hs-source-dirs:    src
    exposed-modules:   Streamly.DOM

    default-language: Haskell2010
    ghc-options:      -Wall -fspec-constr-recursive=10

    if flag(dev)
      ghc-options:    -Wmissed-specialisations
                      -Wall-missed-specialisations
                      -fno-ignore-asserts
    if impl(ghc >= 8.0)
      ghc-options:    -Wcompat
                      -Wunrecognised-warning-flags
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances

    build-depends:     base              >= 4.8   &&  < 5
                     , streamly          >= 0.6   && < 0.7
                     , ghcjs-dom         >= 0.9   && < 0.10

  if impl(ghc < 8.0)
    build-depends:
        semigroups    >= 0.18   && < 0.19

-------------------------------------------------------------------------------
-- Test suites
-------------------------------------------------------------------------------

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options:  -O0 -Wall -fno-ignore-asserts
  if flag(dev)
    cpp-options:    -DDEVBUILD
    ghc-options:    -Wmissed-specialisations
                    -Wall-missed-specialisations
  if impl(ghc >= 8.0)
    ghc-options:    -Wcompat
                    -Wunrecognised-warning-flags
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monadfail-instances
  build-depends:
      streamly-dom
    , base              >= 4.8   && < 5
    , hspec             >= 2.0   && < 3
  default-language: Haskell2010

-------------------------------------------------------------------------------
-- Examples
-------------------------------------------------------------------------------

executable AcidRain
  default-language: Haskell2010
  main-is: AcidRain.hs
  hs-source-dirs: examples
  if flag(examples)
    buildable: True
    build-Depends:
        base              >= 4.8   && < 5
      , ghcjs-dom         >= 0.9   && < 0.10
      , mtl               >= 2.2   && < 3
      , streamly          >= 0.6   && < 0.7
  else
    buildable: False

executable CirclingSquare
  default-language: Haskell2010
  main-is: CirclingSquare.hs
  hs-source-dirs: examples
  if flag(examples)
    buildable: True
    build-Depends:
        base              >= 4.8   && < 5
      , clock             >= 0.7.1 && < 8
      , ghcjs-dom         >= 0.9   && < 0.10
      , mtl               >= 2.2   && < 3
      , streamly          >= 0.6   && < 0.7
  else
    buildable: False